# avoid_cherry

./: .gitignore  Cargo.toml  aos_build.sh  ios_build.sh  readme.md
.cargo/: config.toml
aos/: .gitignore  settings.gradle.kts
aos/app/: build.gradle.kts
aos/app/src/androidTest/java/com/example/avoid_cherry/: ExampleInstrumentedTest.kt
aos/app/src/main/: AndroidManifest.xml
aos/app/src/main/java/com/example/avoid_cherry/: BevySurfaceView.kt  MainActivity.kt  RustBridge.kt  ToggleButton.kt
aos/app/src/main/java/com/example/avoid_cherry/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
aos/app/src/main/res/values/: strings.xml  themes.xml
aos/app/src/test/java/com/example/avoid_cherry/: ExampleUnitTest.kt
aos/gradle/wrapper/: gradle-wrapper.properties
ios/avoid_cherry/: AppDelegate.swift  MetalView.swift  SceneDelegate.swift  ViewController+CoreMotion.swift  ViewController.swift  avoid_cherry-Bridging-Header.h
ios/avoid_cherry.xcodeproj/: project.pbxproj
ios/avoid_cherry/Base.lproj/: Main.storyboard
ios2/ios2/: BevyView.swift  ContentView.swift  avoid_cherry-Bridging-Header.h  ios2App.swift  libavoid_cherry.h
ios2/ios2.xcodeproj/: project.pbxproj
src/: android_asset_io.rs  lib.rs  main.rs
src/app_view/: android.rs  ios.rs  mod.rs
src/ffi/: android.rs  ios.rs  mod.rs
src/game/: breakout.rs  mod.rs
