[package]
name = "avoid_cherry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
bevy = { version = "0.12.1", features = [
    "bevy_audio",
    "bevy_asset",
    "bevy_sprite",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "vorbis",
], default-features = false }
uuid = { version = "1.3.0", features = ["v4"] }
log = "0.4"
raw-window-handle = "0.5"
libc = "*"
wgpu = "0.17"

[target.'cfg(target_os = "ios")'.dependencies]
core-graphics = "*"
objc = "*"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"
jni_fn = "0.1"
# Bevy와 일관성을 유지해야 함
ndk-sys = "0.5.0+25.2.9519653"
ndk = "0.8.0"
ndk-context = "*"
log-panics = "*"

[profile.dev]
opt-level = 1
